# reed-solomon-erasure

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  appveyor.yml  build.rs
.github/workflows/: ci.yml
NicolasT_reedsolomon/: .travis.yml  LICENSE  README.md  Setup.hs  appveyor.yml  circle.yml  reedsolomon.cabal  stack.yaml
NicolasT_reedsolomon/bench/: Main.hs  profiling.hs
NicolasT_reedsolomon/build-tools/: ar-wrapper  ghc-wrapper
NicolasT_reedsolomon/cbits/: .gitignore  Makefile.am  compare-isa.sh  configure.ac  malloc.c  reedsolomon-gal-mul-stdio-quickcheck.hs  reedsolomon-gal-mul-stdio.c  reedsolomon.c  reedsolomon_dispatch.c  test-compilers.sh
NicolasT_reedsolomon/cbits/m4/: ax_gcc_func_attribute.m4
NicolasT_reedsolomon/ci/: step.sh
NicolasT_reedsolomon/ci/travisci/build-test-bench/: before-install.sh  env.sh  install.sh  script.sh
NicolasT_reedsolomon/ci/travisci/cbits-cross/: before-install.sh  install.sh  script.sh
NicolasT_reedsolomon/ci/travisci/check-sdist/: before-install.sh  env.sh  install.sh  script.sh  test.hs
NicolasT_reedsolomon/examples/: README.md  simple-bench.hs  simple-decoder.lhs  simple-encoder.lhs
NicolasT_reedsolomon/src/Data/: ReedSolomon.lhs
NicolasT_reedsolomon/src/Data/ReedSolomon/: Backend.hs  BuildInfo.hs  Galois.lhs  Matrix.lhs
NicolasT_reedsolomon/src/Data/ReedSolomon/Galois/: GenTables.lhs  NoAsm.lhs  SIMD.lhs
NicolasT_reedsolomon/src/Data/Vector/Generic/: Compat.hs  Exceptions.hs  Lifted.hs  Sized.hs
NicolasT_reedsolomon/src/Data/Vector/Storable/: ByteString.hs
NicolasT_reedsolomon/test/: Galois.lhs  Main.hs  Matrix.lhs  ReedSolomon.lhs  Vector.hs
benches/: bandwidth.rs  reconstruct.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_encode_reconstruct.rs  fuzz_encode_repair.rs  fuzz_encode_verify.rs  fuzz_reedsolomon.rs
simd_c/: galois.c  reedsolomon.c  reedsolomon.h
src/: core.rs  errors.rs  errors_tests.rs  galois.rs  galois_16.rs  galois_381.rs  galois_8.rs  galois_ext.rs  galois_prime.rs  galois_test.rs  galois_tests.rs  galois_unrollx8.rs  inversion_tree.rs  inversion_tree_test.rs  inversion_tree_tests.rs  lib.rs  lib_alt.rs  lib_test.rs  lib_tests.rs  macros.rs  matrix.rs  matrix_tests.rs  misc_utils.rs  poly.rs  poly_math.rs  shard_utils.rs
src/tests/: galois_16.rs  galois_381.rs  galois_prime.rs  mod.rs
wasm/: Cargo.toml
wasm/src/: index.ts  lib.rs
