[package]
name = "reed-solomon-erasure-wasm"
version = "0.1.0"
authors = ["Darren Ldl <darrenldldev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reed-solomon-erasure = { path = ".." }
wasm-bindgen = "0.2"
wee_alloc = "0.4.4"

[features]
default = []
